QGuiApplication::font(): assert that a GUI app instance exists

Task-number: QTBUG-28306
Change-Id: Ia5b01265e7f88fdd8c2738ef03b14e83829625b0
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@digia.com>

cregit: e93a69349f3cbca12d2f084798d48f2091ae4f3f https://github.com/qt/qtbase/commit/e93a69349f3cbca12d2f084798d48f2091ae4f3f